# VASP

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
docs/: element_schema_for_planner.md  element_schema_for_planner_from_user.md
examples/: planner_prompt_example.py  sample_elements.json  sample_user_instruction.txt  structured_pipeline_example.py
finetune/: COLAB_TRAINING_GUIDE.md  README.md  WEEK1_EXECUTION.md
finetune/configs/: data.yaml  eval.yaml  train_e2b_qlora.yaml  train_planner_paired_qlora.yaml  train_refiner_paired_qlora.yaml  train_stage_a_planner_qlora.yaml  train_stage_b_refiner_qlora.yaml  train_stage_c_e2e_refiner_qlora.yaml  train_stage_d_planner_dpo.yaml  train_stage_d_refiner_dpo.yaml
finetune/contracts/: planner_output_contract.md  refiner_inter_contract.md
finetune/data/: README.md  a2v_curated_seed.jsonl  build_curriculum_datasets.py  (+57 more)
planner/: __init__.py  build_planner_prompt.py  validate_planner_output.py
scripts/: eval_planner_refiner_endpoints.py
tests/: render_caption_test.py  test_a2v_prompt_generator.py  test_a2v_word_features.py  test_animation_module.py  test_captions.py  test_elements.py  test_elements_media.py  test_imports.py  test_json_compactor.py  test_llm.py  test_llm_pipeline.py  test_llm_to_render.py  test_media_reader.py  test_render_elements.py  test_structured_edit_pipeline_validation.py  test_timeline_builder.py
utility_files/: media_understanding.md  planner_output_schema.md  planner_system_prompt.md  refiner_output_schema.md  refiner_system_prompt.md
vasp/: __init__.py
(+187 files in other folders)
